Implmented Navbar and Contact view

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Website containing information and tools for planning an FEWD Conference Itinerary"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +25,9 @@
     <title>FEWD Conference</title>
   </head>
   <body>
+    <div id="header">
+      <img src="logo.png" id="header-logo"/>
+    </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
