implmented session view and initial search page

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
       content="Website containing information and tools for planning an FEWD Conference Itinerary"
     />
     <title>FEWD Conference</title>
-    <link rel="icon" type="image/x-icon" href="/logo.png">
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
   </head>
   <body>
     <div id="header">
-      <img src="logo.png" id="header-logo"/>
+      <img src="images/logo.png" id="header-logo"/>
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
